# Qt_notes_cpp

./: CMakeLists.txt  README.md  database.db  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.h
